--- a/manga_style.css
+++ b/manga_style.css
@@ -1,7 +1,7 @@
 /* style.css */
 
 body {
-    background-color: #afffff;
+    background-color: #ffffff;
     color: #333333;
     margin: 0;
     padding: 0;
