--- a/template/index.html
+++ b/template/index.html
@@ -14,6 +14,7 @@
 </body>
 <div class="nav-links">
     <a href="1komame.html" class="next-btn">一コマへ ➔</a>
+    <a href="=zenbu.html" class="next-btn">全部</a>
 </div>
 </html>
 
