--- a/template/zenbu.html
+++ b/template/zenbu.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>おわり</p>
+	    <a href="../index.html">index にもどる。<a>>
     </div>
 </body>
 </html>
